This will not be a reversible PCB, so simpler choc footprints

--- a/tc36k/ergogen/config.yaml
+++ b/tc36k/ergogen/config.yaml
@@ -262,7 +262,7 @@ pcbs:
           include_keycap: true
           keycap_height: cy
           keycap_width: cx
-          reversible: true
+          reversible: false
           solder: false
           hotswap: true
           choc_v2_support: true
