Make PCB taller in center to allow access to GPIO zero
The original PCB didn't connect the top pair of pins, so was smaller.

This makes all the top edge horizontal cuts at the same y-value,
giving a tiny bit more room for traces above the middle & ring
fingers.

This should still fit comfortably in the original case design.

--- a/tc36k/ergogen/config.yaml
+++ b/tc36k/ergogen/config.yaml
@@ -209,15 +209,15 @@ outlines:
   pcb:
     - what: outline
       name: raw
-    - what: rectangle
+    - what: rectangle #center top horizontal (screw, controller)
       where: matrix_inner_top
       asym: source
-      size: [100, 30]
+      size: [160, 30]
       adjust:
-        shift: [mg / 2, 14.8]
+        shift: [mg / 2, 16.8]
         orient: 22
       operation: add
-    - what: rectangle #center bot
+    - what: rectangle #center bottom horizontal (inc. screw)
       where: matrix_inner_top
       asym: source
       size: [70, 29]
