Restructure folder hierarchy for TC36k variant support
Separated original and TC36k variant into distinct folders to better reflect structural differences.
Moved relevant files accordingly based on variant-specific requirements.

Note: Commit history was not preserved during file moves. However, as there were no critical changes since the initial release, no further action was taken regarding commit retention.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,kicad,windows,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,kicad,windows,linux
 
+# Ignore ergogen outputs
+*/ergogen/output/
+
 ### KiCad ###
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
