--- a/gt36k/ergogen/config.yaml
+++ b/gt36k/ergogen/config.yaml
@@ -268,7 +268,7 @@ outlines:
       where: true
       size: [16, 16]
 pcbs:
-  gamma-omega-tc36k:
+  gamma-omega-gt36k:
     template: kicad8
     outlines:
       edge:
@@ -301,42 +301,39 @@ pcbs:
           hotswap_3dmodel_xyz_rotation: [180, 0, 0]
           hotswap_3dmodel_xyz_offset: [0, 0, -1.6]
       mcu:
-        what: VladAndral/pipico
+        what: ceoloide/mcu_supermini_nrf52840
         where:
           ref: matrix_inner_top
         adjust:
           shift: [mg / 2, 6.67] 
           orient: 22
         params:
-          mounted: front
+          reversible: false
+          include_extra_pins: true
           # Top left as look at chips, going down
-          GP0: R8
-          GP1: R4
-          GP2: R6
-          GP3: C3
-          GP4: C4
-          GP5: R13
-          GP6: R5
-          GP7: C5
-          GP8: R2
-          GP9: R3
-          GP10: C2
-          GP11: C1
-          GP12: R1
-          GP13: R9
-          GP14: R10
-          GP15: C9
+          P1: C1
+          P0: C2
+          P2: C3
+          P3: C4
+          P4: C5
+          P5: C6
+          P6: C7
+          P7: C8
+          P8: C9
+          P9: C10
           # Bottom right, going up
-          GP16: C13
-          GP17: R12
-          GP18: R11
-          GP19: C11
-          GP20: C12
-          GP21: C10
-          GP22: R7
-          GP26: C6
-          GP27: C7
-          GP28: C8
+          P10: C11
+          P16: C12
+          P14: R1
+          P15: R2
+          P18: R3
+          P19: R4
+          P20: R5
+          P21: R6
+          # Extra trio in middle
+          P101: R7
+          P102: R8
+          P107: R9          
       case-hole-lt:
         what: ceoloide/mounting_hole_plated
         where:
