--- a/gt36k/ergogen/config.yaml
+++ b/gt36k/ergogen/config.yaml
@@ -288,7 +288,7 @@ pcbs:
           reversible: false
           solder: true
           hotswap: true
-          choc_v2_support: false
+          choc_v2_support: true
           outer_pad_width_front: 2.0
           outer_pad_width_back: 2.0
           keycap_3dmodel_filename: '${EG_INFUSED_KIM_3D_MODELS}/Choc_V1_Keycap_MBK_Black_1u.step'
