--- a/gt36k/ergogen/config.yaml
+++ b/gt36k/ergogen/config.yaml
@@ -305,7 +305,13 @@ pcbs:
         where:
           ref: matrix_inner_top
         adjust:
-          shift: [mg / 2, 6.67] 
+          # The Supermini NRF52840 is reportedly 17.78mm wide, 33.00mm long
+          # (and 30.48mm between the center of the top and bottom pins).
+          # The original Raspberry Pi Pico is also 17.78mm wide, but 51mm long
+          # (and 48.26mm between the center of the top and bottom pins).
+          # This is 51 - 33 = 18mm shorter, so adjust the original y-offset by
+          # half of that - so the center is 9mm higher up:
+          shift: [mg / 2, 15.67] 
           orient: 22
         params:
           reversible: false
