Put the hotswaps on the back (controller will be face up on front)

--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -280,7 +280,7 @@ pcbs:
         params:
           from: "{{column_net}}"
           to: "{{row_net}}"
-          side: F
+          side: B
           include_corner_marks: true
           include_keycap: true
           keycap_height: cy
