--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -252,9 +252,9 @@ outlines:
     - what: rectangle # battery cut-out, eg 3.7v 110mAh 301230
       where: matrix_inner_top
       asym: source
-      size: [35,15]  # for 12x30mm battery
+      size: [37,15]  # for 12x30mm battery, off centre due to JST connector
       adjust:
-        shift: [(mg / 2), -38]
+        shift: [(mg / 2) + 5, -38]
         orient: 22
       operation: subtract
 
