--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -304,7 +304,7 @@ pcbs:
           hotswap_3dmodel_filename: '${EG_INFUSED_KIM_3D_MODELS}/Choc_V1_Hotswap.step'
           hotswap_3dmodel_xyz_rotation: [180, 0, 0]
           hotswap_3dmodel_xyz_offset: [0, 0, -1.6]
-      battery_connector:
+      battery_connector_jst:
         what: ceoloide/battery_connector_jst_ph_2
         where:
           ref: matrix_inner_bottom
@@ -316,6 +316,18 @@ pcbs:
           # We have no power switch between RAW and BAT_P
           BAT_N: GND
           BAT_P: RAW
+      battery_connector_molex:
+        what: ceoloide/battery_connector_molex_pico_ezmate_1x02
+        where:
+          ref: matrix_inner_bottom
+        adjust:
+          shift: [-2,-17.25]
+          orient: 22+90
+        params:
+          side: F
+          # We have no power switch between RAW and BAT_P
+          BAT_N: GND
+          BAT_P: RAW         
       mcu:
         what: ceoloide/mcu_supermini_nrf52840
         where:
