--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -408,3 +408,42 @@ pcbs:
         where:
           ref: mirror_matrix_pinky_bottom
           shift: [88, -51]
+      # Silk-screen art
+      front_logo:
+        what: hesse_logo
+        params:
+          layer: F.SilkS
+        where:
+          aggregate.parts: [matrix_inner_bottom, mirror_matrix_inner_bottom]
+          shift: [0, -27]
+      back_logo:
+        what: hesse_logo
+        params:
+          layer: B.SilkS
+        where:
+          aggregate.parts: [matrix_inner_bottom, mirror_matrix_inner_bottom]
+          shift: [0, -27]
+      text1:
+        what: ceoloide/utility_text
+        params:
+          reversible: true
+          text: Hesse
+          width: 1.6
+          height: 1.6
+          thickness: 0.32
+        where:
+          aggregate.parts: [matrix_inner_bottom, mirror_matrix_inner_bottom]
+          shift: [-17, -20]
+      text2:
+        what: ceoloide/utility_text
+        params:
+          reversible: true
+          text: Configuration
+          width: 1.6
+          height: 1.6
+          thickness: 0.32
+        where:
+          aggregate.parts: [matrix_inner_bottom, mirror_matrix_inner_bottom]
+          shift: [-17, -23]
+        
+
