--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -304,6 +304,18 @@ pcbs:
           hotswap_3dmodel_filename: '${EG_INFUSED_KIM_3D_MODELS}/Choc_V1_Hotswap.step'
           hotswap_3dmodel_xyz_rotation: [180, 0, 0]
           hotswap_3dmodel_xyz_offset: [0, 0, -1.6]
+      row_route:
+        what: ceoloide/utility_router
+        where: true
+        params:
+          net: "{{row_net}}"
+          route: "b(-4.9,3.8)(4.1,3.8)(8.15,-0.25)(8.15,-3.75)"
+      column_route:
+        what: ceoloide/utility_router
+        where: true
+        params:
+          net: "{{column_net}}"
+          route: "b(-3.5,-5.7)(-7,-2.2)(-7,5.8)(0,5.8)"
       battery_connector_jst:
         what: ceoloide/battery_connector_jst_ph_2
         where:
