--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -316,6 +316,12 @@ pcbs:
         params:
           net: "{{column_net}}"
           route: "b(-3.5,-5.7)(-7,-2.2)(-7,5.8)(0,5.8)"
+      column_route_down:
+        what: ceoloide/utility_router
+        where: [ [-/.*bottom/, -/thumb.*/] ]
+        params:
+          net: "{{column_net}}"
+          route: "b(-7,5.8)(-3.5,11)" 
       battery_connector_jst:
         what: ceoloide/battery_connector_jst_ph_2
         where:
