--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -312,18 +312,21 @@ pcbs:
         params:
           net: "{{row_net}}"
           route: "b(-4.9,3.8)(4.1,3.8)(8.15,-0.25)(8.15,-3.75)"
+          width: 0.2
       column_route:
         what: ceoloide/utility_router
         where: true
         params:
           net: "{{column_net}}"
           route: "b(-3.5,-5.7)(-7,-2.2)(-7,5.8)(0,5.8)"
+          width: 0.2
       column_route_down:
         what: ceoloide/utility_router
         where: [ [-/.*bottom/, -/thumb.*/] ]
         params:
           net: "{{column_net}}"
-          route: "b(-7,5.8)(-3.5,11)" 
+          route: "b(-7,5.8)(-3.5,11)"
+          width: 0.2
       battery_connector_jst:
         what: ceoloide/battery_connector_jst_ph_2
         where:
