--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -256,7 +256,7 @@ outlines:
       asym: source
       size: [39,24]
       adjust:
-        shift: [(mg / 2) + 3, -33.5]  # off centre due to JST connector
+        shift: [(mg / 2) - 3, -33.5]  # off centre due to JST connector
         orient: 22
       operation: subtract
 
@@ -340,11 +340,12 @@ pcbs:
           reset_switch_3dmodel_xyz_scale: [1, 1, 1]
       battery_connector_jst:
         what: ceoloide/battery_connector_jst_ph_2
+        asym: source
         where:
-          ref: matrix_inner_bottom
+          ref: matrix_inner_top
         adjust:
-          shift: [-10,-13]
-          orient: 22+90
+          shift: [41,49.6]
+          orient: 22-90
         params:
           side: F
           # We have no power switch between RAW and BAT_P
@@ -352,11 +353,11 @@ pcbs:
           BAT_P: RAW
       battery_connector_molex:
         what: ceoloide/battery_connector_molex_pico_ezmate_1x02
-        where:
-          ref: matrix_inner_bottom
+        asym: source
+        where: matrix_inner_top
         adjust:
-          shift: [-3,-16.75]
-          orient: 22+90
+          shift: [34, 46]
+          orient: 22-90
         params:
           side: F
           # We have no power switch between RAW and BAT_P
