Swap to Nice Nano footprint to do the tighter wiring
Can swap back or add the Supermini nRF52840 pins later (within the
Nice Nano radio keepout).

--- a/hesse/ergogen/config.yaml
+++ b/hesse/ergogen/config.yaml
@@ -353,7 +353,7 @@ pcbs:
           BAT_N: GND
           BAT_P: RAW
       mcu:
-        what: ceoloide/mcu_supermini_nrf52840
+        what: ceoloide/mcu_nice_nano
         where:
           ref: matrix_inner_top
         adjust:
